@@ -11,6 +11,7 @@ class AreciboConfiguration(SimpleItem):
     account_number = FieldProperty(IAreciboConfiguration['account_number'])
     app_name = FieldProperty(IAreciboConfiguration['app_name'])
     transport = FieldProperty(IAreciboConfiguration['transport'])
+    ignore_localhost = FieldProperty(IAreciboConfiguration['ignore_localhost'])
     
 def form_adapter(context):
     return getUtility(IAreciboConfiguration, name='Arecibo_config', context=context)
